--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,6 @@ API_SERVER_PORT = 3000
 EXPIRE_DAY = 1
 EXPIRE_HOUR = 0
 
-COM_SERVER_URL = http://localhost
+COM_SERVER_URL = http://localhost:3000
 
 COM_SERVER_NAME = '수원디지털시티'
