--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,14 @@ development:
   host: localhost
   port: 3306
 
+newbiz_noti:
+  adapter: mysql2
+  encoding: utf8
+  database: com_dev
+  username: root
+  password: root.123
+  host: 222.235.208.216
+  port: 3306
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
