--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,6 @@ EXPIRE_DAY = 1
 EXPIRE_HOUR = 0
 
 #COM_SERVER_URL = http://localhost:80
-COM_SERVER_URL = http://localhost:3000
+COM_SERVER_URL = http://222.235.208.216:3000
 
 COM_SERVER_NAME = '수원디지털시티'
