after test at samsung

--- a/.env.development
+++ b/.env.development
@@ -1,15 +1,15 @@
-#API_SERVER_HOST = http://192.0.14.3
-#API_SERVER_PORT = 8838
-#API_SERVER_MOCKUP = false
+API_SERVER_HOST = http://192.0.14.3
+API_SERVER_PORT = 8838
+API_SERVER_MOCKUP = false
 
-API_SERVER_HOST = http://localhost
-API_SERVER_PORT = 4000
-API_SERVER_MOCKUP = true
+#API_SERVER_HOST = http://localhost
+#API_SERVER_PORT = 4000
+#API_SERVER_MOCKUP = true
 
 EXPIRE_DAY = 1
 EXPIRE_HOUR = 0
 
-#COM_SERVER_URL = http://localhost:80
-COM_SERVER_URL = http://222.235.208.216:3000
+COM_SERVER_URL = http://localhost:80
+#COM_SERVER_URL = http://222.235.208.216:3000
 
 COM_SERVER_NAME = '수원디지털시티'
